TestRepo2/src/objects/Page_Content__c.object
<CustomObject>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Page_Content_Value__c</fullName>
        <label>Page Content Value</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Page_Name__c</fullName>
        <label>Page Name</label>
        <picklist>
            <picklistValues>
                <fullName>Terms &amp; Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Privacy Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Codes &amp; Policies</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Page Content</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Page_Name__c</columns>
        <columns>Order__c</columns>
        <columns>Page_Content_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Page Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Page Contents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>